--- a/.github/CHANGETHIS/deploy-staging.yml
+++ b/.github/CHANGETHIS/deploy-staging.yml
@@ -1,4 +1,11 @@
 @@ -0,0 +1,3 @@
 name: Staging deployment
 
+on: 
+  pull_request:
+    types: [labeled]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
 on:
